# react-native-ffmpeg

./: .gitignore  README.md  index.js  package.json
android/: build.gradle
android/distribution/ffmpeg/include/libavutil/: ffversion.h
android/distribution/ffmpeg/lib/armeabi/: libavcodec.so.57  libavfilter.so.6.92.100  libswscale.so.4.7.101
android/distribution/ffmpeg/lib/armeabi-v7a/: libavfilter.so.6.92.100  libavformat.so.57.73.100  libavutil.so.55
android/distribution/ffmpeg/lib/armeabi-v7a/pkgconfig/: libswresample.pc  libswscale.pc
android/distribution/ffmpeg/lib/armeabi/pkgconfig/: libavcodec.pc  libavfilter.pc
android/distribution/ffmpeg/lib/x86/: libavfilter.so.6  libswresample.so.2.8.100
android/distribution/ffmpeg/lib/x86/pkgconfig/: libavcodec.pc  libavfilter.pc  libavformat.pc  libswresample.pc  libswscale.pc
android/distribution/include/libavutil/: ffversion.h
android/distribution/libs/armeabi-v7a/lib/: libavutil.so.55.63.100  libswresample.so.2.8.100  libswscale.so.4.7.101
android/distribution/libs/armeabi-v7a/lib/pkgconfig/: libavcodec.pc  libavfilter.pc  libavformat.pc  libavutil.pc
android/distribution/libs/armeabi/lib/: libavformat.so.57.73.100  libavutil.so.55.63.100  libswresample.so.2.8.100
android/distribution/libs/armeabi/lib/pkgconfig/: libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
android/distribution/libs/x86/lib/: libavfilter.so.6.92.100  libavformat.so.57  libavformat.so.57.73.100  libavutil.so.55.63.100  libswscale.so.4.7.101
android/distribution/libs/x86/lib/pkgconfig/: libavutil.pc
android/gradle/wrapper/: gradle-wrapper.properties
android/src/main/java/com/reactlibrary/: RNFFMpegModule.java  RNFFMpegPackage.java
android/src/main/java/com/rnffmpeg/: FFMpeg.java  IFFMpegCallback.java
android/src/main/jni/: CMakeLists.txt  FFMpegJNI.cpp  FFMpegJNI.hpp  encodeVideoOnly.c  encodeVideoOnly.h  ffmpeg.c  make_gif.c  make_gif.h
android/src/main/jni/test/: main.c
ffmpeg_test_app/: app.json  index.android.js  index.ios.js  package-lock.json  package.json
ffmpeg_test_app/android/: .project  settings.gradle
ffmpeg_test_app/android/app/: BUCK  build.gradle
ffmpeg_test_app/android/app/src/main/: AndroidManifest.xml
ffmpeg_test_app/android/app/src/main/java/com/ffmpeg_test_app/: MainActivity.java  MainApplication.java
ffmpeg_test_app/android/app/src/main/res/values/: strings.xml
ffmpeg_test_app/android/gradle/wrapper/: gradle-wrapper.properties
ffmpeg_test_app/ios/ffmpeg_test_app/: AppDelegate.m  Info.plist
ffmpeg_test_app/ios/ffmpeg_test_app.xcodeproj/: project.pbxproj
ffmpeg_test_app/ios/ffmpeg_test_app.xcodeproj/xcshareddata/xcschemes/: ffmpeg_test_app-tvOS.xcscheme  ffmpeg_test_app.xcscheme
ffmpeg_test_app/ios/ffmpeg_test_app/Base.lproj/: LaunchScreen.xib
ffmpeg_test_app/ios/ffmpeg_test_appTests/: ffmpeg_test_appTests.m
ios/: RNRnFfmpeg.h  RNRnFfmpeg.m  RNRnFfmpeg.podspec
ios/RNRnFfmpeg.xcodeproj/: project.pbxproj
test_app/: index.android.js  index.ios.js  package-lock.json  package.json
test_app/android/: settings.gradle
test_app/android/app/: build.gradle
test_app/android/app/src/main/java/com/test_app/: MainApplication.java
test_app/android/gradle/wrapper/: gradle-wrapper.properties
test_app/ios/test_app/: AppDelegate.m
test_app/ios/test_app.xcodeproj/: project.pbxproj
